Complete implementation of RESTFUL API DESIGN WITH CRUD OPERATIONS and rest client testing

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "description": "",
   "devDependencies": {
     "dotenv": "^16.4.7"
+  },
+  "dependencies": {
+    "express": "^4.21.2",
+    "mongoose": "^8.9.2"
   }
 }
